@@ -241,6 +241,17 @@
       </tr>
       <tr>
         <td align="right" style="color:#ff0000" nowrap>
+           Mod-1 
+        </td>
+        <td align="center" nowrap>
+            B
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Move the pointer to the lower right corner of the screen
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
            Control  Shift 
         </td>
         <td align="center" nowrap>
@@ -285,6 +296,17 @@
       </tr>
       <tr>
         <td align="right" style="color:#ff0000" nowrap>
+           Mod-1 
+        </td>
+        <td align="center" nowrap>
+            T
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Switch to editing mode
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
            Control 
         </td>
         <td align="center" nowrap>
@@ -299,7 +321,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Agrave
+          |1|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -310,7 +332,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Ccedilla
+          |2|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -321,7 +343,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Underscore
+          |3|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -332,7 +354,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Egrave
+          |4|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -343,7 +365,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Minus
+          |5|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -354,7 +376,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Parenleft
+          |6|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -365,7 +387,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Quoteright
+          |7|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -376,7 +398,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Quotedbl
+          |8|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -387,7 +409,7 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Eacute
+          |9|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -398,21 +420,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Ampersand
+          |0|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
-        </td>
-      </tr>
-      <tr>
-        <td align="right" style="color:#ff0000" nowrap>
-          
-        </td>
-        <td align="center" nowrap>
-          Twosuperior
-        </td>
-        <td style="color:#0000ff" nowrap>
-          Move the pointer to the lower right corner of the screen
         </td>
       </tr>
     </table>
@@ -1140,7 +1151,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Agrave
+          |1|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1151,7 +1162,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Ccedilla
+          |2|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1162,7 +1173,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Underscore
+          |3|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1173,7 +1184,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Egrave
+          |4|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1184,7 +1195,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Minus
+          |5|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1195,7 +1206,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Parenleft
+          |6|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1206,7 +1217,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Quoteright
+          |7|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1217,7 +1228,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Quotedbl
+          |8|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1228,7 +1239,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Eacute
+          |9|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
@@ -1239,7 +1250,7 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          Ampersand
+          |0|
         </td>
         <td style="color:#0000ff" nowrap>
           Bind or jump to a slot
