@@ -501,7 +501,10 @@
       <a name="CLFSWM-MENU"></a><a href="#MAIN">Clfswm-Menu</a>
     </h3>
     <p>
-      r: Reload clfswm
+      r: Reset clfswm
+    </p>
+    <p>
+      l: Reload clfswm
     </p>
     <p>
       x: Exit clfswm
